syntax = "proto3";

package memoria;

service LobbyService {
  rpc RegisterToLobby (Empty)         returns (stream LobbyReply)     {}
  rpc CreateGame      (CreateRequest) returns (Empty)                 {}
  rpc JoinGame        (JoinRequest)   returns (stream GameStateReply) {}
}

service GameService {
}

message Empty {}

message LobbyReply {
  uint32 id = 1;
  uint32 width = 2;
  uint32 height = 3;
  uint32 connected = 4;
  uint32 player_cap = 5;
}

message CreateRequest {
  uint32 width = 1;
  uint32 height = 2;
  uint32 player_cap = 3;
}

message JoinRequest {
  uint32 id = 1;
}

message GameStateReply {
  string message = 1;
}

message CreateReply {
  bool success = 1;
}
